<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/circularImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/default_background"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/button_rounded"
        android:drawableTop="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circularImageView">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/first_ib"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:background="@color/redPrimaryDark" />

                <ImageButton
                    android:id="@+id/second_ib"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:background="@color/bluePrimaryDark" />

                <ImageButton
                    android:id="@+id/three_ib"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="8dp"
                    android:background="@color/greenPrimaryDark" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:src="@drawable/ic_arr_down" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:helperText="@string/title_helper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewContainer">

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_ed"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:helperText="@string/text_helper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_title">

        <EditText
            android:id="@+id/text_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_ed"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_text" />

    <Button
        android:id="@+id/show_notification_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/firstBtn_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/planets_spinner" />

    <Button
        android:id="@+id/reset_color_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/secondBtn_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_notification_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>



